bugfix for 500 pages
bugfix for labels overlapping
bugfix for images overlapping on smaller screens

--- a/interface/static/less/cyti/cyti.less
+++ b/interface/static/less/cyti/cyti.less
@@ -69,7 +69,7 @@ nav > div.navbar-header > a > img {
   @radius: 3px;
   .lh-border-radius(@radius);
   background-color: @gray-darker;
-  width: 300px;
+  width: 100%;
   height: 250px;
   padding: 0px;
   margin-bottom: 20px;
@@ -79,7 +79,7 @@ nav > div.navbar-header > a > img {
     .lh-border-top-right-radius(@radius);
 
     height: 200px;
-    width: 300px;
+    width: 100%;
   }
 
   .caption {
